--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -22,6 +22,8 @@ jobs:
         exclude:
           - laravel: 10.*
             php: 8.0
+          - laravel: 10.*
+            php: 7.4
           - laravel: 9.*
             php: 7.4
           - laravel: 8.*
