--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -21,9 +21,7 @@ jobs:
             testbench: 6.*
         exclude:
           - laravel: 10.*
-            php: 8.0
-          - laravel: 10.*
-            php: 7.4
+            php: 8.0, 7.4
           - laravel: 9.*
             php: 7.4
           - laravel: 8.*
